--- a/css/main.css
+++ b/css/main.css
@@ -3,11 +3,7 @@
 	padding: 0;
 }
 body {
-	background: #f1f1f1;
-}
-
-html {
-	overflow: hidden;
+	background: #e6e6e6;
 }
 
 #main img {
@@ -15,7 +11,7 @@ html {
 	width: 100%;
 }
 
-#main {
+#main .col-md-4{
 	margin-top: 1rem;
 }
 
